# lobbybee-backend

./: .env.example  .gitignore  Dockerfile  HotelTypeDef.md  PlatformTypeDef.md  README.md  TypeDef.md  contextManager.md  conversationLog.md  debug_gen_output.txt  debug_output.txt  debug_urls.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  features_list.md  generate_typedefs.py  manage.py  payments.md  plan.md  pyproject.toml  requirements.txt  run_checkin_tests.sh  run_tasks.py  seed.sql  test_celery.py  test_checkin_tasks.py  test_settings.py  updated_seed.sql
.beads/: issues.jsonl  lobbybee-backend.db
LobbyBeeAPITest/: Auth.bru  ChatWebSocket.bru  CreateRoom.bru  Get Conversation.bru  aws.bru  bruno.json  collection.bru  stay api test.bru  webhook trigger.bru
admin_stat/: apps.py  serializers.py  urls.py  views.py
chat/: MEDIA_SENDING.md  README.md  admin.py  consumers.py  models.py  review.md  serializers.py  tasks.py  urls.py  views.py  views_original.py
context_manager/: API_DOCUMENTATION.md  API_SUMMARY.md  ContextArchitecture.md  HOTEL_ADMIN.md  PLARFORM_ADMIN.md  admin.py  models.py  serializers.py  services.py  tasks.py  test_summary.md  tests_flow_steps_views.py  tests_integration.py  tests_message_templates_views.py  tests_real_world_flow.py  tests_services.py  tests_webhook_views.py  urls.py
flag_system/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
guest/: IMPLEMENTATION_SUMMARY.md  admin.py  api_doc.md  api_example.md  models.py  name_utils.py  permissions.py  serializers.py  services.py  services_checkout.py  services_invoice.py  tasks.py  tests.py  tests_invoice.py  tests_reminders.py  urls.py  views.py
hotel/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
(+271 files in other folders)
